# openapi_parser

./: .envrc  .gitignore  Cargo.toml  build.sh  flake.nix  openapi.json  pubspec.yaml  readme.md  test_scheme.json
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/generate/: dart.rs  interface.rs  mod.rs
src/generate/dart/: endpoints.rs  mod.rs  readme.rs  schemas.rs  schemas_depricated.rs  schemes.rs  serde.dart  serde.rs  types.rs
src/generate/dart/endpoints/: imports.dart  interface.dart  macros.rs
src/parse/: intermediate.rs
test/: bla.dart  integration._test.dart  x._test.dart
tests/: dart_generation.rs
