[package]
name = "openapi_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
oas3 = "0.15.0"
reqwest = "0.12.12"
serde_json = "1.0.138"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = "z"
codegen-units = 1 #run single-thread st everything knows about everything